--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ by Tristan Fisher(http://www.tristanfisher.com).
 				<div class="topic_header">CONTACT METHODS</div>
 				<div class="body_text">
                     <p><a href="mailto:iam@lari4.com">iam@lari4.com</a> - This would be the best way to contact me.</p>
-                    <p>tel. - +7 (999) 002-06-54</p>
+                    <p>tel. +7 (999) 002-06-54</p>
 				</div>
 
 				<div class="topic_header">RESUME</div>
